--- a/client/src/App.css
+++ b/client/src/App.css
@@ -173,9 +173,11 @@ input {
 }
 
 .overlay {
-	background: #279EFF;
-	background: -webkit-linear-gradient(to right, #7ac3ff, #008cff);
-	background: linear-gradient(to right, #6ebbfa, #0087f5);
+	background: rgb(122,195,255);
+	background: -moz-radial-gradient(circle, rgba(122,195,255,1) 0%, rgba(0,140,255,1) 100%);
+	background: -webkit-radial-gradient(circle, rgba(122,195,255,1) 0%, rgba(0,140,255,1) 100%);
+	background: radial-gradient(circle, rgba(122,195,255,1) 0%, rgba(0,140,255,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#7ac3ff",endColorstr="#008cff",GradientType=1);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: 0 0;
