--- a/client/src/App.css
+++ b/client/src/App.css
@@ -341,4 +341,14 @@ input {
 	height: 6rem;
 }
 
+.search_user_input {
+	position: absolute;
+	left: 10rem;
+	width: 10rem;
+	height: 2rem;
+	border: 1px solid rgb(205, 205, 205);
+	border-radius: 5px;
+	background-color: white;
+}
+
 /* NavBar */
